...
            android:layout_marginStart="16dp">

            <Button
                android:id="@+id/button_view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Details"
                android:textSize="11sp"
                android:padding="4dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:elevation="2dp" />

            <Button
                android:id="@+id/button_delete_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textSize="11sp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:backgroundTint="#B00020"
                android:textColor="@android:color/white"
                android:elevation="2dp" />
...
