...
        android:paddingBottom="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/see_waitList"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See Waitlist"
            android:backgroundTint="@color/black"/>
...
